--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
+    android:gravity="center"
     tools:context=".MainActivity">
+
+
 
     <Button
         android:layout_width="match_parent"
@@ -18,9 +20,6 @@
         android:textColor="@color/blue"
         android:textSize="20sp"
         android:textStyle="bold" />
-
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -127,9 +126,30 @@
             android:textAlignment="center"
             android:textSize="16sp"/>
 
+
     </LinearLayout>
+
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/calendarRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/drawer_layout"
+        >
+
+        <include layout="@layout/activity_drawer"/>
+
+
+    </androidx.drawerlayout.widget.DrawerLayout>
+
+
+
+
+
 </LinearLayout>
