--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
+
     tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
+
 
         <Button
             android:layout_width="match_parent"
@@ -21,15 +21,13 @@
             android:text="Weekly"
             android:textColor="@color/blue"
             android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent">
+            >
 
             <Button
                 android:layout_width="0dp"
@@ -72,9 +70,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent">
+            >
 
             <TextView
                 android:layout_width="0dp"
@@ -143,14 +140,14 @@
         </LinearLayout>
 
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/calendarRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
+
+            ></androidx.recyclerview.widget.RecyclerView>
 
 
         <androidx.drawerlayout.widget.DrawerLayout
@@ -162,10 +159,10 @@
 
 
         </androidx.drawerlayout.widget.DrawerLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
 
 
-</layout>
+
+</LinearLayout>
